- Track line and column numbers - Better use of const string references - More tolerant parsing of expressions to be a little more C like

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,11 @@ cmake_minimum_required(VERSION 2.8)
 find_package(BISON)
 find_package(FLEX)
 
+include_directories(
+    ${CMAKE_SOURCE_DIR}
+    ${CMAKE_BINARY_DIR}
+)
+
 BISON_TARGET(SQLParser
     SQLParse_yacc.ypp
     ${CMAKE_CURRENT_BINARY_DIR}/SQLParse_yacc.cpp
@@ -11,6 +16,8 @@ BISON_TARGET(SQLParser
 FLEX_TARGET(SQLLexer
     SQLParse_lex.lpp
     ${CMAKE_CURRENT_BINARY_DIR}/SQLParse_lex.cpp
+    # Make the lexer case insensitive
+    COMPILE_FLAGS -i
 )
 
 ADD_FLEX_BISON_DEPENDENCY(SQLLexer SQLParser)
