--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_definitions(-DSQL_DATE_SUPPORT=1)
+add_definitions(-DSQL_DATE_SUPPORT=1 -DSQL_IP_SUPPORT=1)
 
 find_package(BISON)
 find_package(FLEX)
